--- a/theme/street_college/scss/pre.scss
+++ b/theme/street_college/scss/pre.scss
@@ -70,6 +70,7 @@ $color-danger-background: $color-blue-cornflower-pale;
 $color-danger-foreground: $color-blue-midnight-dark;
 
 $color-card: $color-onyx;
+$color-card-header: $color-platinum;
 $color-lowlight: $color-turquoise-bright;
 $color-lowlight-hover: $color-aquamarine;
 
